<resources>
    <string name="app_name">App de Cadastro</string>
    <string name="produtos">Produtos</string>
    <string name="clientes">Clientes</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="sair">Sair</string>
    <string name="listagem">Listagem</string>
    <string name="cadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="quantidade">Quantidade</string>
    <string name="marca">Marca</string>
    <string name="pre_o">Preço</string>
</resources>